[tool.poetry]
name = "btcvector"
version = "0.1.0"
description = ""
authors = ["Aman Rojjha <aman.rojjha@research.iiit.ac.in>", "urvish <urvishp80@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "8.8.0"
Flask = "2.3.2"
openai = "0.27.8"
pandas = "2.0.2"
pinecone-client = "2.2.2"
python-dotenv = "1.0.0"
tqdm = "4.65.0"
jupyter = "^1.0.0"
langchain = "0.0.201"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
tiktoken = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py39','py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git     # exclude the ".git" directory
  | \.github  # exclude the ".github" directory
  | \.pytest_cache # exclude the ".pytest_cache" directory
  | venv    # exclude the ".venv" directory
  | \.idea    # exclude the "idea" directory 
  | __pycache__ # exclude "pycache" directory
  | .*egg-info
  | .*/migrations
  | \.ipynb_checkpoints
  | build
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 80
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
